--- a/app/scheduler/subarrays/subarrays.html
+++ b/app/scheduler/subarrays/subarrays.html
@@ -16,7 +16,7 @@
         <div class="md-whiteframe-z1" style="margin-left: 2px;" layout="column" flex>
             <md-toolbar class="panel-toolbar md-whiteframe-z1">
                 <div layout="row" class="unselectable md-toolbar-tools-small">
-                    <span flex>{{::subarray.name}}'s Schedule Blocks</span>
+                    <span flex>{{::subarray.name}}'s Draft Schedule Blocks</span>
                     <md-button aria-label="Add A Schedule" style="font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
                                ng-click="console.log('add a schedule not implemented yet')">
                         <span class="fa fa-plus-circle"></span>
