--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -10,7 +10,7 @@
         <md-button aria-label="Alarms" class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
         <md-button aria-label="Health and State" class="md-raised md-primary" ng-click="vm.stateGo('health')">Health and State</md-button>
 
-        <md-button aria-label="Scheduler" class="md-raised md-primary" ng-click="vm.stateGo('schedulerHome')">Scheduler Home</md-button>
+        <md-button aria-label="Scheduler" class="md-raised md-primary" ng-click="vm.stateGo('scheduler')">Scheduler Home</md-button>
         <md-button aria-label="Weather" class="md-raised md-primary" ng-click="vm.stateGo('weather')">Weather</md-button>
         <md-button aria-label="Sensor Graphs" class="md-raised md-primary" ng-click="vm.stateGo('sensorGraph')">Sensor Graphs</md-button>
 
