initial commit for subarray resources display

--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -12,7 +12,7 @@
                     <div style="height: 250px;" ng-include="'images/subarrays.svg'"></div>
                     <span>Manage Sub-Arrays</span></div>
             </md-button>
-            <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler')">
+            <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.resources')">
                 <div layout="column">
                     <div style="height: 250px;" ng-include="'images/subarrays-resources.svg'"></div>
                     <span id="subarrays-img-target-color">Manage Sub-Array Resources</span></div>
