--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 <script src="app/scheduler/scheduler-home.js"></script>
 <script src="app/scheduler/sb-drafts/sb-drafts.js"></script>
 <script src="app/scheduler/subarrays/subarrays.js"></script>
+<script src="app/scheduler/subarray-resources/subarray-resources.js"></script>
 <!--<script src="app/widgets/gantt/gantt-widget.js"></script>-->
 <!-- Add New Component JS Above -->
 
@@ -148,7 +149,7 @@
                             <span class="fa fa-asterisk"></span>
                             <button>Sub-Arrays</button>
                         </div>
-                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="scheduler">
+                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('scheduler.resources')">
                             <span class="fa fa-sitemap"></span>
                             <button>Sub-Array Resources</button>
                         </div>
