better subarrays population

--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -7,6 +7,14 @@
         <span>{{vm.resourcePoolData2 | json}}</span>
         <span>resourcePoolDataFree</span>
         <span>{{vm.resourcePoolDataFree | json}}</span>
+        <span>allocations</span>
+        <span>{{vm.allocations | json}}</span>
+        <span>subarraysFree</span>
+        <span>{{vm.subarraysFree | json}}</span>
+        <span>subarraysInUse</span>
+        <span>{{vm.subarraysInUse | json}}</span>
+        <span>subarraysMaintenance</span>
+        <span>{{vm.subarraysMaintenance | json}}</span>
     </div>
 
 </div>
