--- a/app/scheduler/subarrays/subarrays.html
+++ b/app/scheduler/subarrays/subarrays.html
@@ -1,49 +1,50 @@
 <div flex layout="column" style="min-width: 1515px; min-height: 850px; margin: 16px;" ng-controller="SubArraysCtrl as vm">
 
-    <div ng-repeat="subarray in vm.subarrays track by subarray.id" class="md-whiteframe-z2 subarray-container" layout="row" layout-align="start">
+    <div ng-repeat="subarray in vm.subarrays track by subarray.id" class="md-whiteframe-z2 subarray-container" layout="row" layout-align="start"
+         md-theme="{{subarray.state === 'free'? 'teal' : subarray.state === 'inUse'? 'amber' : 'deep-purple'}}">
 
         <div class="subarray-item md-whiteframe-z1" layout="column" layout-align="start center" title="{{::subarray.description}}">
             <h2>Sub-Array {{::subarray.id}}</h2>
 
             <div ng-include="'images/subarray.svg'"></div>
-            <span style="font-weight: bold">{{::subarray.name}}</span>
+            <span style="font-weight: bold" ng-if="subarray.description">{{::subarray.description}}</span>
 
-            <div flex layout="column" layout-align="start center" style="width: 100%; padding: 8px; overflow: hidden; ">
-                <span style="overflow: hidden; text-overflow: ellipsis;">{{::subarray.description}}</span>
-            </div>
+            <!--<div flex layout="column" layout-align="start center" style="width: 100%; padding: 8px; overflow: hidden; ">-->
+                <!--<span style="overflow: hidden; text-overflow: ellipsis;">{{::subarray.description}}</span>-->
+            <!--</div>-->
         </div>
 
         <div class="md-whiteframe-z1" style="margin-left: 2px;" layout="column" flex>
-            <md-toolbar class="panel-toolbar md-whiteframe-z1">
+            <md-toolbar class="md-whiteframe-z1 md-primary">
                 <div layout="row" class="unselectable md-toolbar-tools-small">
-                    <span flex>{{::subarray.name}}'s Draft Schedule Blocks</span>
-                    <md-button aria-label="Add A Schedule" style="font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
-                               ng-click="console.log('add a schedule not implemented yet')">
-                        <span class="fa fa-plus-circle"></span>
-                        <md-tooltip>Add A Schedule</md-tooltip>
-                    </md-button>
+                    <span flex>{{::subarray.state}}</span>
+                    <!--<md-button aria-label="Add A Schedule" style="font-size: 16px;" class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"-->
+                               <!--ng-click="console.log('add a schedule not implemented yet')">-->
+                        <!--<span class="fa fa-plus-circle"></span>-->
+                        <!--<md-tooltip>Add A Schedule</md-tooltip>-->
+                    <!--</md-button>-->
                 </div>
 
                 <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 0;" layout="row" layout-align="center center">
-                        <span style="max-width: 160px;min-width: 160px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
+                        <span style="max-width: 160px;min-width: 160px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('id_code')">
                             <span style="padding: 8px">ID</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
                                   style="margin-right: 4px;"></span>
                         </span>
-                        <span flex style="width: 180px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('description')">
+                        <span flex style="width: 180px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('description')">
                             <span style="padding: 8px">Description</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'description' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'description' && vm.draftsOrderBy.reverse}"
                                   style="margin-right: 4px;"></span>
                         </span>
-                        <span style="max-width: 122px;min-width: 122px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('type')">
+                        <span style="max-width: 122px;min-width: 122px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('type')">
                             <span style="padding: 8px">Type</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
                                   style="margin-right: 4px;"></span>
                         </span>
-                        <span style="max-width: 135px;min-width: 135px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                        <span style="max-width: 135px;min-width: 135px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('desired_start_time')">
                             <span style="padding: 8px">Desired Time</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
@@ -52,8 +53,8 @@
                 </div>
             </md-toolbar>
             <div flex class="schedule-draft-data-list">
-                <!--sb in subarray.sb track by sb.id_code-->
-                <div ng-repeat="item in vm.scheduleDraftData | filter:{sub_nr: subarray.id}"
+                <!--| filter:{sub_nr: subarray.id}-->
+                <div ng-repeat="item in subarray.scheduleBlocks track by item.id_code"
                      ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
                      ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}" class="schedule-draft-item animate-repeat" layout="column">
                     <div style="" layout="row" layout-align="center center">
